--- a/Blog/src/app/components/posts/post/post.component.html
+++ b/Blog/src/app/components/posts/post/post.component.html
@@ -1,1 +1,4 @@
-<p>post works!</p>
+<div *ngIf="post" class="card">
+    <div class="card-title">{{ post.title }}</div>
+    <div class="card-body">{{ post.body }}</div>
+</div>
