--- a/Blog/src/app/components/posts/post/post.component.html
+++ b/Blog/src/app/components/posts/post/post.component.html
@@ -1,4 +1,6 @@
 <div *ngIf="post" class="card">
-    <div class="card-title">{{ post.title }}</div>
-    <div class="card-body">{{ post.body }}</div>
+    <div class="card-body">
+        <h5 class="card-title">{{ post.title }}</h5>
+        <p class="card-text">{{ post.body }}</p>
+    </div>
 </div>
