--- a/Blog/src/styles.css
+++ b/Blog/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('./reset.css');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+.collapse {
+    display: none;
+}
+
+.show {
+    display: block;
+}
